<resources>
    <string name="app_name">IR</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_show_marks">ShowMarksActivity</string>
    <string name="signOut">Sign out</string>
    <string name="home_signUp">Sign up</string>
    <string name="title_activity_login">login</string>

    <string name="signup_nameLbl">Name</string>
    <string name="signup_emailLbl">Email</string>
    <string name="signup_mobileLbl">Mobile</string>
    <string name="signup_classDivPrompt">Class/Division</string>
    <string name="signup_subjectPrompt">Subject</string>
    <string name="signup_registerBtn">Register</string>

    <string name="addMark_rollNo">Roll No</string>
    <string name="addMark_studentName">Student Name</string>
    <string name="addMark_Dept">Department</string>
    <string name="addMark_AcademicYr">Academic Year</string>
    <string name="addMark_Mark">Mark</string>

    <string name="addMark_rollNoVal">1122</string>
    <string name="addMark_studentNameVal">Vishwanath Mathapati</string>
    <string name="addMark_DeptVal">Physics</string>
    <string name="addMark_AcademicYrVal">2017-2018</string>
    <string name="addMark_MarkVal">85</string>

    <string name="addMark_previousBtn">Previous &lt;</string>
    <string name="addMark_nextBtn">Next &gt;</string>
    <string name="addMark_saveAllBtn">Save All</string>

    <string-array name="subject_arrays">
        <item>Physics</item>
        <item>Chemistry</item>
        <item>History</item>
        <item>Kannada</item>
        <item>Accounts</item>
        <item>Social Studies</item>
        <item>Finance</item>
    </string-array>

    <string-array name="classDiv_arrays">
        <item>Science</item>
        <item>Arts</item>
        <item>Commerece</item>
    </string-array>
    <string name="title_activity_student_details">studentDetailsActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_mark">AddMarkActivity</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
