<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addMark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.marks.com.ir.view.impl.MarksLabelFragment">

    <TextView
        android:id="@+id/rollNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:text="@string/addMark_rollNo" />

    <TextView
        android:id="@+id/stdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:text="@string/addMark_studentName" />

    <TextView
        android:id="@+id/dept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:text="@string/addMark_Dept" />

    <TextView
        android:id="@+id/academicYr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:text="@string/addMark_AcademicYr" />

    <TextView
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="40dp"
        android:text="@string/addMark_Mark" />
</LinearLayout>